<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    tools:context=".fragments.PassoUmCadastroFragment"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/edtNome"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:hint="@string/nome_administrador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtTelefone"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:hint="@string/telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtEmail"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtSenha"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:hint="@string/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtConfirmacaoSenha"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:hint="@string/confirme_sua_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>